Fix z-index on dropdowns

--- a/src/scripts/OSUIFramework/Pattern/Dropdown/scss/_dropdown-tags.scss
+++ b/src/scripts/OSUIFramework/Pattern/Dropdown/scss/_dropdown-tags.scss
@@ -13,6 +13,10 @@
 		}
 	}
 
+	.vscomp-wrapper {
+		z-index: 3;
+	}
+
 	// Service Studio Preview
 	&-ss-preview {
 		-servicestudio-background-color: var(--color-neutral-0);
